--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
 
-  <link rel="stylesheet" href="style.css" />
+  <!-- <link rel="stylesheet" href="style.css" /> -->
   <script src="script.js" defer></script>
 </head>
 
@@ -18,6 +18,9 @@
       <li id="fruta-3"></li>
       <li id="fruta-4"></li>
     </ul>
+    <label name="nome">Fruta</label>
+    <input text="text" id="nome">
+    <button onclick="recebeFruta()">Clique aqui</button>
   </main>
 </body>
 
